--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -619,7 +619,7 @@
     <string name="new_user_signup">New User? Signup</string>
     <string name="or_login_with">Or Login With</string>
     <string name="welcome">Welcome</string>
-    <string name="best_iranian_vpn">Best iranian VPN</string>
+    <string name="welcome_title">Best VPN Ever</string>
     <string name="info">Info</string>
     <string name="plan">Plan</string>
     <string name="expiration_date">Expiration date</string>
