--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -476,7 +476,7 @@
     <string name="new_user_signup">کاربر جدید هستید؟ ثبت نام</string>
     <string name="or_login_with">یا ورود با</string>
     <string name="welcome">خوش آمدید</string>
-    <string name="welcome_title">بهترین وی پی ان ایرانیان</string>
+    <string name="welcome_title">بهترین وی پی ان</string>
     <string name="info">اطلاعات</string>
     <string name="plan">پلن</string>
     <string name="expiration_date">تاریخ انقضا:</string>
