--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -497,4 +497,5 @@
     <string name="enter_your_message">Enter your Message</string>
     <string name="send">Send</string>
     <string name="exit_account">Exit Account</string>
+    <string name="get_more_data">Get more data</string>
 </resources>
