--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -487,4 +487,5 @@
     <string name="enter_your_message">لطفا متن پیام خود را بنوسید</string>
     <string name="send">ارسال</string>
     <string name="exit_account">خروج از حساب کاربری</string>
+    <string name="get_more_data">دریافت حجم بیشتر</string>
 </resources>
