--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -475,8 +475,8 @@
     <string name="forgot_password">رمز عبور خود را فراموش کرده اید؟</string>
     <string name="new_user_signup">کاربر جدید هستید؟ ثبت نام</string>
     <string name="or_login_with">یا ورود با</string>
-    <string name="welcome">خوش آمدید</string>
-    <string name="welcome_title">بهترین وی پی ان</string>
+    <string name="welcome">خوش آمدید\nبه</string>
+    <string name="welcome_title">تجربه ای بی نظیر از سرعت و امنیت</string>
     <string name="info">اطلاعات</string>
     <string name="plan">پلن</string>
     <string name="expiration_date">تاریخ انقضا:</string>
@@ -487,5 +487,8 @@
     <string name="enter_your_message">لطفا متن پیام خود را بنوسید</string>
     <string name="send">ارسال</string>
     <string name="exit_account">خروج از حساب کاربری</string>
-    <string name="get_more_data">دریافت حجم بیشتر</string>
+    <string name="get_more_data">دریافت حجم اضافه</string>
+    <string name="connect_state">اتصال</string>
+    <string name="connected_state">متصل شدید</string>
+    <string name="connecting_state">در حال اتصال…</string>
 </resources>
