--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -619,8 +619,8 @@
     <string name="forgot_password">Forgot Password?</string>
     <string name="new_user_signup">New User? Signup</string>
     <string name="or_login_with">Or Login With</string>
-    <string name="welcome">Welcome</string>
-    <string name="welcome_title">Best VPN Ever</string>
+    <string name="welcome">Welcome\nto</string>
+    <string name="welcome_title">A unique experience of speed and security</string>
     <string name="info">Info</string>
     <string name="plan">Plan</string>
     <string name="expiration_date">Expiration date</string>
@@ -632,4 +632,7 @@
     <string name="send">Send</string>
     <string name="exit_account">Exit Account</string>
     <string name="get_more_data">Get more data</string>
+    <string name="connect_state">Connect</string>
+    <string name="connected_state">Connected</string>
+    <string name="connecting_state">Connecting…</string>
 </resources>
