--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -619,7 +619,7 @@
     <string name="new_user_signup">New User? Signup</string>
     <string name="or_login_with">Or Login With</string>
     <string name="welcome">Welcome\nto</string>
-    <string name="welcome_title">A unique experience of speed and security</string>
+    <string name="welcome_title">A unique experience of\nspeed and security</string>
     <string name="info">Info</string>
     <string name="plan">Plan</string>
     <string name="expiration_date">Expiration date</string>
